--- a/ES6/c01_es6_build_env/index2.html
+++ b/ES6/c01_es6_build_env/index2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ES6 环境搭建</title>
-    <script src="dist/index.js"></script>
+    <title>ES6 解构赋值</title>
+    <script src="dist/index2.js"></script>
 </head>
 <body>
-    Hello ECMA Script 6
+    
 </body>
 </html>
