--- a/gulp/re-html/src/index.html
+++ b/gulp/re-html/src/index.html
@@ -5,41 +5,17 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HomePage 8102</title>
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/global.css">
-    <!-- <link rel="stylesheet/less" href="css/global.less"> -->
+    <title>首页 - HomePage 8102</title>
+
+    @@include('view/styles.html')
+
     <link rel="stylesheet" href="css/index.css">
-    <!-- <link rel="stylesheet/less" href="css/index.less"> -->
-    <!-- <script src="css/lib/less.min.js"></script> -->
 </head>
 
 <body>
-    <!-- 头部 -->
-    <div class="header clearfix">
-        <div class="container">
-            <div class="logo-wrap">
-                <a href="index.html">
-                    <img src="img/logo.png">
-                    <h1>HomePage</h1>
-                </a>
-            </div>
-            <div class="nav">
-                <ul>
-                    <li>
-                        <a href="index.html">首页</a>
-                    </li>
-                    <li>
-                        <a href="article-list.html">博客文章</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">联系方式</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- end-头部 -->
+    @@include('view/header/header.html',{
+        "index": "active"
+      })
 
     <!-- 首页内容 -->
     <div class="main clearfix container">
@@ -63,7 +39,7 @@
                             <img src="img/article-item.jpg">
                         </div>
                         <div class="item">
-                            <h3>gulp入门教程详解</h3>
+                            <h3>8012年了，传统前端静态页终于组件化！</h3>
                             <p>最近使用gulp自动化构建工具来开发网站，在此给大家分享一下使用gulp的一些使用教程。</p>
                         </div>
                     </a>
@@ -108,16 +84,10 @@
     </div>
     <!-- end-首页内容 -->
 
-    <!-- 底部 -->
-    <div class="footer">
-        <div class="container">
-            <div class="copyright">Copyright &copy;2018 canwdev ReHTML Project</div>
-        </div>
-    </div>
-    <!-- end-底部 -->
+    @@include('view/footer/footer.html')
 
-    <script src="js/lib/jquery.min.js"></script>
-    <script src="js/global.js"></script>
+    @@include('view/scripts.html')
+    
 </body>
 
 </html>
