--- a/gulp/re-html/src/contact.html
+++ b/gulp/re-html/src/contact.html
@@ -8,7 +8,7 @@
     <title>联系方式 - HomePage 8102</title>
     <link rel="stylesheet" href="css/normalize.min.css">
     
-    @@include('view/styles.html')
+    @@include('@styles.html')
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 
     @@include('view/footer/footer.html')
 
-    @@include('view/scripts.html')
+    @@include('@scripts.html')
 </body>
 
 </html>
