--- a/gulp/re-html/src/index.html
+++ b/gulp/re-html/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页 - HomePage 8102</title>
 
-    @@include('view/styles.html')
+    @@include('@styles.html')
 
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -86,7 +86,7 @@
 
     @@include('view/footer/footer.html')
 
-    @@include('view/scripts.html')
+    @@include('@scripts.html')
     
 </body>
 
