--- a/Vue/vue2.5-qunar-app/vue-1/index.8.html
+++ b/Vue/vue2.5-qunar-app/vue-1/index.8.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vue中的列表渲染</title>
+    <title>Vue中的列表渲染、set</title>
 </head>
 
 <body>
