--- a/css3/flex/index.html
+++ b/css3/flex/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="m-flex">
-        <p>hello flex</p>
+    <div class="m-container bg-yellow">
+        <div class="m-item item-white">lorem</div>
+        <div class="m-item item-white">lorem</div>
+        <div class="m-item item-white">lorem</div>
+        <div class="m-item item-white">lorem</div>
+        <div class="m-item item-white">lorem</div>
     </div>
 </body>
 </html>
