--- a/css3/flex/index.html
+++ b/css3/flex/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <div class="m-container bg-yellow">
-        <div class="m-item item-white">lorem</div>
-        <div class="m-item item-white">lorem</div>
-        <div class="m-item item-white">lorem</div>
-        <div class="m-item item-white">lorem</div>
-        <div class="m-item item-white">lorem</div>
+        <div class="m-item item-white">1</div>
+        <div class="m-item item-white m-item-shrink">2</div>
+        <div class="m-item item-white m-item-basis">3</div>
+        <div class="m-item item-white">4</div>
+        <div class="m-item item-white">5</div>
+        <div class="m-item item-white">6</div>
+        <div class="m-item item-white m-item-bottom">7</div>
+        <div class="m-item item-white m-item-grow-2">8</div>
+        <div class="m-item item-white">9</div>
+        <div class="m-item item-white m-item-first">10</div>
     </div>
 </body>
 </html>
