--- a/Vue/vue2.5-qunar-app/vue-2/index.1.html
+++ b/Vue/vue2.5-qunar-app/vue-2/index.1.html
@@ -11,6 +11,7 @@
     <div id="root">
         <p>使用v-bind指令、prop向子组件传值，使用data函数接收值并修改</p>
         <p>
+            <!-- 使用@increase接收increase事件，触发父组件的handleIncrease函数。 -->
             <counter v-bind:count="1" @increase="handleIncrease"></counter>
             <counter :count="2" @increase="handleIncrease"></counter>
             求和：{{total}}
@@ -32,7 +33,7 @@
                     var step = 2;
                     // this.count++; // 不可以直接修改父组件传递的值
                     this.number += step;
-                    // 向外触发change事件，可携带参数以传值
+                    // 使用$emit向外触发事件，可携带参数以传值
                     this.$emit('increase', step);
                 }
             }
