--- a/Vue/vue2.5-qunar-app/vue-2/index.3.html
+++ b/Vue/vue2.5-qunar-app/vue-2/index.3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>给组建绑定原生事件</title>
+    <title>给组件绑定原生事件</title>
     <script src="../lib/vue.js"></script>
 </head>
 
