--- a/Vue/vue2.5-qunar-app/vue-1/index.1.html
+++ b/Vue/vue2.5-qunar-app/vue-1/index.1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vue实例组件</title>
+    <title>Vue实例</title>
 </head>
 
 <body>
@@ -13,15 +13,10 @@
         <div @click="handleClick">
             {{message}}
         </div>
-        <item></item>
     </div>
 
     <script src="../lib/vue.js"></script>
     <script>
-        Vue.component('item', {
-            template: '<div>hello item</div>'
-        })
-
         var vm = new Vue({
             el: '#app',
             data: {
