--- a/Vue/vue2.5-qunar-app/vue-1/index.4.html
+++ b/Vue/vue2.5-qunar-app/vue-1/index.4.html
@@ -5,54 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vue计算属性，方法，侦听器</title>
+    <title>Vue模板语法</title>
 </head>
 
 <body>
     <div id="app">
-        {{ fullName }} {{ age }}
+        <div v-bind:title="title">{{message + Math.random()}}</div>
+        <div v-text="message + Math.random()"></div>
+        <div v-html="message + Math.random()"></div>
     </div>
-    <pre>
-    // 打开console，输入：
-    vm.age = 20
-    vm.firstName = '11'
-    </pre>
 
     <script src="../lib/vue.js"></script>
     <script>
         var vm = new Vue({
             el: '#app',
             data: {
-                firstName: 'Kane',
-                lastName: 'Wh',
-                // fullName: 'Kane Wh',    // 侦听器
-                age: '21'
-            },
-            //// 计算属性（推荐），{{ fullName }}
-            computed: {
-                fullName: function () {
-                    console.log('computed');
-                    return this.firstName + ' ' + this.lastName;
-                }
-            },
-            methods: {
-                //// 方法，{{ fullName() }}
-                // fullName: function() {
-                //     console.log('computed');
-                //     return this.firstName + ' ' + this.lastName;
-                // }
-            },
-            //// 侦听器，{{ fullName }}
-            // watch: {
-            //     firstName: function() {
-            //         console.log('computed');
-            //         this.fullName = this.firstName + ' ' + this.lastName;
-            //     },
-            //     lastName: function() {
-            //         console.log('computed');
-            //         this.fullName = this.firstName + ' ' + this.lastName;
-            //     }
-            // }
+                message: '<h1>hello world</h1>',
+                title: 'hello world'
+            }
         })
     </script>
 </body>
