--- a/Vue/vue2.5-qunar-app/vue-1/index.5.html
+++ b/Vue/vue2.5-qunar-app/vue-1/index.5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vue计算属性的get和set</title>
+    <title>Vue计算属性，方法，侦听器</title>
 </head>
 
 <body>
@@ -14,7 +14,8 @@
     </div>
     <pre>
     // 打开console，输入：
-    vm.fullName = 'Dell Lee'
+    vm.age = 20
+    vm.firstName = '11'
     </pre>
 
     <script src="../lib/vue.js"></script>
@@ -24,21 +25,34 @@
             data: {
                 firstName: 'Kane',
                 lastName: 'Wh',
+                // fullName: 'Kane Wh',    // 侦听器
                 age: '21'
             },
+            //// 计算属性（推荐），{{ fullName }}
             computed: {
-                fullName: {
-                    get: function() {
-                        return this.firstName + ' ' + this.lastName;
-                    },
-                    set: function(value) {
-                        var arr = value.split(" ");
-                        console.log(arr);
-                        this.firstName = arr[0];
-                        this.lastName = arr[1];
-                    }
+                fullName: function () {
+                    console.log('computed');
+                    return this.firstName + ' ' + this.lastName;
                 }
-            }
+            },
+            methods: {
+                //// 方法，{{ fullName() }}
+                // fullName: function() {
+                //     console.log('computed');
+                //     return this.firstName + ' ' + this.lastName;
+                // }
+            },
+            //// 侦听器，{{ fullName }}
+            // watch: {
+            //     firstName: function() {
+            //         console.log('computed');
+            //         this.fullName = this.firstName + ' ' + this.lastName;
+            //     },
+            //     lastName: function() {
+            //         console.log('computed');
+            //         this.fullName = this.firstName + ' ' + this.lastName;
+            //     }
+            // }
         })
     </script>
 </body>
