--- a/Vue/vue2.5-qunar-app/vue-2/index.1.html
+++ b/Vue/vue2.5-qunar-app/vue-2/index.1.html
@@ -4,51 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>父子组件的数据传递</title>
+    <title>组件使用的细节点</title>
+
     <script src="../lib/vue.js"></script>
+
 </head>
 <body>
     <div id="root">
-        <p>使用v-bind指令、prop向子组件传值，使用data函数接收值并修改</p>
-        <p>
-            <!-- 使用@increase接收increase事件，触发父组件的handleIncrease函数。 -->
-            <counter v-bind:count="1" @increase="handleIncrease"></counter>
-            <counter :count="2" @increase="handleIncrease"></counter>
-            求和：{{total}}
-        </p>
+        <table>
+            <tbody>
+                <tr is="row"></tr>
+                <tr is="row"></tr>
+                <tr is="row"></tr>
+            </tbody>
+        </table>
     </div>
     <script>
-        Vue.component('counter', {
-            // count 是父组件传来的值
-            props: ['count'],
+        // 如果直接在tbody里面写<row>组件，这样会产生问题，因为tbody里面只能有td>tr标签。
+        // 所以要使用is指令
+
+        Vue.component('row', {
             data: function() {
-                return {
-                    // 使用一个子组件数据来接收父组件传递过来的值
-                    number: this.count
+                return {    // 使用这种方式让组件拥有数据。
+                    content: 'this is content'
                 }
             },
-            template: '<button @click="handleClick">{{number}}</button>',
+            template: '<tr><td>{{ content }}</td></tr>'
+        });
+
+        var vm = new Vue({
+            el: '#root'
+        });
+    </script>
+
+    <div id="reftest">
+        <p>这个名为hello的参照保存在this.$refs中，它保存了这个button的DOM对象和VM数据。</p>
+        <button ref="hello" @click="handleClick">点我</button>
+    </div>
+    <script>
+        var test = new Vue({
+            el: '#reftest',
             methods: {
                 handleClick: function() {
-                    var step = 2;
-                    // this.count++; // 不可以直接修改父组件传递的值
-                    this.number += step;
-                    // 使用$emit向外触发事件，可携带参数以传值
-                    this.$emit('increase', step);
+                    console.log(this.$refs);
+                    alert(this.$refs.hello.outerHTML);
                 }
             }
         })
-        var vm = new Vue({
-            el: '#root',
-            data: {
-                total: 3
+    </script>
+
+    <p id="reftest2">
+        <!-- 监听change事件，并向父组件触发handleChange方法，用ref传值 -->
+        <counter ref="one" @change="handleChange"></counter>
+        <counter ref="two" @change="handleChange"></counter>
+        求和：{{total}}
+    </p>
+    <script>
+        Vue.component('counter', {
+            template: '<button @click="handleClick">{{number}}</button>',
+            data: function() {
+                return {
+                    number: 0
+                }
             },
             methods: {
-                handleIncrease: function(step) {
-                    this.total+=step;
+                handleClick: function() {
+                    this.number++;
+                    // 子组件向外触发一个事件
+                    this.$emit('change');
                 }
             }
-        });
+        })
+        var test2 = new Vue({
+            el: '#reftest2',
+            data: {
+                total: 0
+            },
+            methods: {
+                handleChange: function() {
+                    // this.total++;
+                    this.total = this.$refs.one.number + this.$refs.two.number;
+                }
+            }
+        })
     </script>
 </body>
 </html>
