--- a/Vue/vue2.5-qunar-app/vue-2/index.3.html
+++ b/Vue/vue2.5-qunar-app/vue-2/index.3.html
@@ -5,52 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>给组件绑定原生事件</title>
+    <title>组件参数校验与非props特性</title>
     <script src="../lib/vue.js"></script>
 </head>
 
 <body>
     <div id="root">
-        <p>如果直接写@click事件，handleClick是不会被触发的，必须在子组件内$emit一个click事件，才会触发。</p>
-        <child @click="handleClick"></child>
+        <!-- :content 相当于 v-bind:content 内容是JavaScript表达式 -->
+        <child content="hope"></child>
     </div>
     <script>
         Vue.component('child', {
-            template: '<button @click="handleChildClick">Child</button>',
-            methods: {
-                handleChildClick: function () {
-                    alert('handle child click');
-                    this.$emit('click');
-                }
-            }
-        });
-
-        var vm = new Vue({
-            el: '#root',
-            methods: {
-                handleClick: function () {
-                    alert('handle click');
-                }
-            }
+            // props: ['content'],  // 一般的写法，使用props接收到父组件的数据
+            // 只要子组件用props接收了父组件的content数据，父组件的content属性就不会显示在dom属性中
+            props: {
+                'content': {
+                    type: String,
+                    required: false,
+                    default: 'default value',
+                    validator: function(value) {    // 这个验证器不能使用v-bind:语句。
+                        var state = value.length > 5;
+                        if(!state) {
+                            console.log('字符串长度必须大于5');
+                        }
+                        return state;
+                    }
+                }   
+                // 使用props对象，使用简单的表达式约束content必须是一个字符串 'content': String
+                // 使用数组来进行多个约束规则 'content':[String, Number]
+                // 使用对象进行更复杂的规则约束 'content': {type: String,required: false,default: 'default value'}   
+            },
+            template: '<div>{{content}}</div>'
         })
-    </script>
-
-    <div id="root2">
-        <p>使用@click.native触发原生点击事件</p>
-        <child @click.native="handleClick"></child>
-    </div>
-    <script>
-        Vue.component('child', {
-            template: '<button>Child2</button>'
-        });
-
         var vm = new Vue({
-            el: '#root2',
-            methods: {
-                handleClick: function () {
-                    alert('handle click');
-                }
-            }
+            el:'#root'
         })
     </script>
 </body>
