--- a/Vue/vue2.5-qunar-app/vue-2/index.4.html
+++ b/Vue/vue2.5-qunar-app/vue-2/index.4.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>非父子组件的传值：Bus/总线/发布订阅模式/观察者模式</title>
+    <title>给组件绑定原生事件</title>
     <script src="../lib/vue.js"></script>
 </head>
+
 <body>
     <div id="root">
-        <child content="Hello"></child>
-        <child content="World"></child>
+        <p>如果直接写@click事件，handleClick是不会被触发的，必须在子组件内$emit一个click事件，才会触发。</p>
+        <child @click="handleClick"></child>
     </div>
     <script>
-        // 在Vue的原型上加上一个bus属性，使其等于新Vue实例的引用，这个属性会在Vue对象的全局作用域链被访问到。
-        Vue.prototype.bus = new Vue();
-
         Vue.component('child', {
-            props: {
-                content: String
-            },
-            data: function() {
-                return {
-                    // 使用复制后的来自父组件的信息
-                    selfContent: this.content
-                }
-            },
-            template: '<button @click="handleChildClick">{{selfContent}}</button>',
+            template: '<button @click="handleChildClick">Child</button>',
             methods: {
-                handleChildClick: function() {
-                    // 向bus发送一个事件和一个参数，这样在任何vue实例中写了这个事件的监听器，都能接收到这个事件
-                    this.bus.$emit('change', this.content);
+                handleChildClick: function () {
+                    alert('handle child click');
+                    this.$emit('click');
                 }
-            },
-            // 在组件Vue生命周期：挂载完成后运行的钩子函数。
-            mounted: function() {
-                // 保存当前this作用域指针
-                var this_ = this;
-                this.bus.$on('change', function(msg) {
-                    // 所有组件都能接收到的事件
-                    alert("当前组件selfContent："+this_.selfContent+"，接收到的信息："+msg);
-                    // this_.selfContent = msg; 
-                })
             }
         });
 
         var vm = new Vue({
-            el: '#root'
+            el: '#root',
+            methods: {
+                handleClick: function () {
+                    alert('handle click');
+                }
+            }
+        })
+    </script>
+
+    <div id="root2">
+        <p>使用@click.native触发原生点击事件</p>
+        <child @click.native="handleClick"></child>
+    </div>
+    <script>
+        Vue.component('child', {
+            template: '<button>Child2</button>'
+        });
+
+        var vm = new Vue({
+            el: '#root2',
+            methods: {
+                handleClick: function () {
+                    alert('handle click');
+                }
+            }
         })
     </script>
 </body>
+
 </html>
