--- a/Vue/vue2.5-qunar-app/vue-2/index.5.html
+++ b/Vue/vue2.5-qunar-app/vue-2/index.5.html
@@ -4,35 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>在Vue中使用插槽 (slot)</title>
+    <title>非父子组件的传值：Bus/总线/发布订阅模式/观察者模式</title>
     <script src="../lib/vue.js"></script>
 </head>
 <body>
     <div id="root">
-        <child>
-            <p>我是简单的插槽的内容</p>
-        </child>
-        <hr>
-        <body-content>
-            <p slot="header">具名插槽：header</h1>
-            <p slot="footer">具名插槽：footer</h1>
-        </body-content>
+        <child content="Hello"></child>
+        <child content="World"></child>
     </div>
     <script>
+        // 在Vue的原型上加上一个bus属性，使其等于新Vue实例的引用，这个属性会在Vue对象的全局作用域链被访问到。
+        Vue.prototype.bus = new Vue();
+
         Vue.component('child', {
-            template: '<div>\
-                            <p>Hello</p>\
-                            <slot><p style="color:red">没有插槽时显示默认内容</p></slot>\
-                        </div>'
+            props: {
+                content: String
+            },
+            data: function() {
+                return {
+                    // 使用复制后的来自父组件的信息
+                    selfContent: this.content
+                }
+            },
+            template: '<button @click="handleChildClick">{{selfContent}}</button>',
+            methods: {
+                handleChildClick: function() {
+                    // 向bus发送一个事件和一个参数，这样在任何vue实例中写了这个事件的监听器，都能接收到这个事件
+                    this.bus.$emit('change', this.content);
+                }
+            },
+            // 在组件Vue生命周期：挂载完成后运行的钩子函数。
+            mounted: function() {
+                // 保存当前this作用域指针
+                var this_ = this;
+                this.bus.$on('change', function(msg) {
+                    // 所有组件都能接收到的事件
+                    alert("当前组件selfContent："+this_.selfContent+"，接收到的信息："+msg);
+                    // this_.selfContent = msg; 
+                })
+            }
         });
 
-        Vue.component('body-content', {
-            template: `<div>
-                            <slot name="header"></slot>
-                            <div>content</div>
-                            <slot name="footer"></slot>
-                       </div>`
-        })
         var vm = new Vue({
             el: '#root'
         })
