vue 过渡动画，多组件过渡

--- a/Vue/vue2.5-qunar-app/vue-2/index.8.html
+++ b/Vue/vue2.5-qunar-app/vue-2/index.8.html
@@ -54,7 +54,7 @@
     <hr>
 
     <div id="root2">
-        <p>Vue动态组件儿，使用:is语法绑定相应组件名，棒极了</p>
+        <p>Vue动态组件，使用:is语法绑定相应组件名，棒极了</p>
         <component :is="type"></component>
         <button @click="handleChange" class="change">变</button>
     </div>
