--- a/Vue/vue2.5-qunar-app/project/index.html
+++ b/Vue/vue2.5-qunar-app/project/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimun-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>travel</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <title>旅行 · Travel</title>
   </head>
   <body>
     <div id="app"></div>
