update ajax demo

--- a/JavaScript/ajax-test/index.jquery.jsonp.html
+++ b/JavaScript/ajax-test/index.jquery.jsonp.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AJAX jQuery 跨域问题 DEMO</title>
+    <title>AJAX jQuery jsonp解决跨域问题 DEMO</title>
     <script src="http://apps.bdimg.com/libs/jquery/1.8.3/jquery.min.js"></script>
 </head>
 
 <body>
-    <button id="getData">获取数据</button>
+    <button id="getData">获取api.douban.com的数据</button>
     <div id="result"></div>
 
     <script>
