--- a/JavaScript/ajax-test/index.html
+++ b/JavaScript/ajax-test/index.html
@@ -14,25 +14,30 @@
 
     <script>
         function getData() {
-            var xmlhttp;
+            var xhr;
+            // 创建xhr对象
             if (window.XMLHttpRequest) {
                 // Chrome, Firefox, IE7+, Opera, Safari 浏览器执行代码
-                xmlhttp = new XMLHttpRequest();
+                xhr = new XMLHttpRequest();
             } else {
                 // IE6, IE5 浏览器执行代码
-                xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+                xhr = new ActiveXObject("Microsoft.XMLHTTP");
             }
 
             // 回调函数
-            xmlhttp.onreadystatechange = function () {
+            xhr.onreadystatechange = function () {
                 // 状态码检测
-                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                    document.querySelector("#result").innerHTML = xmlhttp.responseText;
+                if (xhr.readyState == 4 && xhr.status == 200) {
+                    document.querySelector("#result").innerHTML = xhr.responseText;
                 }
-                console.log(xmlhttp);
+                console.log(xhr);
             }
-            xmlhttp.open("GET", "data.txt", true);
-            xmlhttp.send();
+
+            // 配置请求方式GET/POST，链接地址
+            xhr.open("GET", "data.txt", true);
+
+            // 发送请求
+            xhr.send();
         }
         document.querySelector('#getData').onclick = getData;
     </script>
